--- a/ND_01/p2.html
+++ b/ND_01/p2.html
@@ -18,7 +18,7 @@
             <p>Salos žinomos dėl:</p>
             <ul>
                 <li>Pico kalno</li>
-                <li>Sete Cidades ežero</li>
+                <li>Sete Cidades ežeras</li>
                 <li>Geoterminių šaltinių</li>
             </ul>
         </div>
