--- a/ND_01/Puslapis.html
+++ b/ND_01/Puslapis.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilius1.css">
     <title>Salų takais</title>
 </head>
-<body>
-   <header>
-    <nav>
-        <a href="Salų takais"></a>
-    </nav>
-    <h1><i>Salų takais &#127965</i></h1>
+<body class="bodis">
+   <div>
+        <h1><i>Salų takais &#127965</i></h1>
+    </div> 
     <section>
         <ol>
             <li><a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a></li>
@@ -55,6 +54,5 @@
             </tr>
         </table>
     </section>
-   </header> 
 </body>
 </html>
