--- a/ND_01/Puslapis.html
+++ b/ND_01/Puslapis.html
@@ -14,8 +14,8 @@
         <ol>
             <li><a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a></li>
             <li><a href="http://127.0.0.1:5500/ND_01/p2.html" target="_blank">Azorai</a></li>
-            <li><a href="http://127.0.0.1:5500/ND_01/p3.html">La Palma</a></li>
-            <li><a href="http://127.0.0.1:5500/ND_01/p4.html">Žaliasis kyšulys</a></li>
+            <li><a href="http://127.0.0.1:5500/ND_01/p3.html" target="_blank">La Palma</a></li>
+            <li><a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a></li>
         </ol>
     </section>
     <section>
