--- a/ND_01/p2.html
+++ b/ND_01/p2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilius3.css">
     <title>Azorai</title>
 </head>
 <body>
@@ -12,10 +13,10 @@
         <h1>Azorai &#128506;</h1>
     </div>
     <section>
-        <p lign="left">Azorai – tai Portugalijos salynas Atlanto vandenyne, įkurtas 1432m., sudarytas iš 9 vulkaninės kilmės salų. Oficiali kalba yra portugalų, o pagrindinė valiuta – euras.
+        <p lign="left" class="pirmas">Azorai – tai Portugalijos salynas Atlanto vandenyne, įkurtas 1432m., sudarytas iš 9 vulkaninės kilmės salų. Oficiali kalba yra portugalų, o pagrindinė valiuta – euras.
         </p>
         <div>
-            <p>Salos žinomos dėl:</p>
+            <p class="salos">Salos žinomos dėl:</p>
             <ul>
                 <li>Pico kalno</li>
                 <li>Sete Cidades ežeras</li>
