--- a/ND_01/Puslapis.html
+++ b/ND_01/Puslapis.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Slabo+27px&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stilius1.css">
     <title>Salų takais</title>
 </head>
-<body class="bodis">
+<body>
    <div>
         <h1><i>Salų takais &#127965</i></h1>
     </div> 
@@ -18,41 +19,34 @@
             <li><a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a></li>
         </ol>
     </section>
-    <section>
-        <table>
-            <tr>
-                <th>Madeira (Portugalija)</th>
-                <th>Azorai (Portugalija)</th>
-                <th>La Palma (Ispanija)</th>
-            </tr>
-            <tr style="height: 200px;">
-                <td>
-                    <ul><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos</ul>
-                    <ul><b>Pagrindinė kalba:</b>Portugalų</ul>
-                    <ul><b>Atstumas nuo Lietuvos:</b> ~4000 km</ul>
-                </td>
-                <td>
-                    <ul><b>Geografinė padėtis:</b> Atlanto vandenyne, tarp Europos ir Š. Amerikos</ul>
-                    <ul><b>Pagrindinė kalba:</b> Portugalų</ul>
-                    <ul><b>Atstumas nuo Lietuvos:</b> ~4200 km</ul>
-                </td>
-                <td>
-                    <ul><b>Geografinė padėtis:</b> Atlanto vandenyne, Kanarų salos</ul>
-                    <ul><b>Pagrindinė kalba:</b> Ispanų</ul>
-                    <ul><b>Atstumas nuo Lietuvos:</b> ~4500 km</ul>
-                </td>
-            </tr>
-            <tr>
-                <th>Žaliasis kyšulys (Cape Verde)</th>
-            </tr>
-            <tr>
-                <td>
-                    <ul><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos</ul>
-                    <ul><b>Pagrindinė kalba:</b> Portugalų (taip pat kreolų)</ul>
-                    <ul><b>Atstumas nuo Lietuvos:</b> ~5500 km</ul>
-                </td>
-            </tr>
-        </table>
+    <section class="konteineris">
+        <div class="blokai">
+            <h2>Madeira (Portugalija)</h2>
+            <p><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos<br>
+               <b>Pagrindinė kalba:</b>Portugalų<br>
+               <b>Atstumas nuo Lietuvos:</b> ~4000 km 
+            </p>
+        </div>
+        <div class="blokai">
+            <h2>Azorai (Portugalija)</h2>
+            <p><b>Geografinė padėtis:</b> Atlanto vandenyne, tarp Europos ir Š. Amerikos<br>
+               <b>Pagrindinė kalba:</b>Portugalų<br>
+               <b>Atstumas nuo Lietuvos:</b> ~4200 km 
+        </div>
+        <div class="blokai">
+            <h2>La Palma (Ispanija)</h2>
+            <p><b>Geografinė padėtis:</b> Atlanto vandenyne, Kanarų salos<br>
+               <b>Pagrindinė kalba:</b>Ispanų<br>
+               <b>Atstumas nuo Lietuvos:</b> ~4500 km
+            </p> 
+        </div>
+        <div class="blokai">
+            <h2>Žaliasis kyšulys (Cape Verde)</h2>
+            <p><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos<br>
+               <b>Pagrindinė kalba:</b>Portugalų (taip pat kreolų)<br>
+               <b>Atstumas nuo Lietuvos:</b> ~5500 km 
+            </p>
+        </div>
     </section>
 </body>
 </html>
