--- a/ND_01/Puslapis.html
+++ b/ND_01/Puslapis.html
@@ -8,17 +8,16 @@
     <title>Salų takais</title>
 </head>
 <body>
-   <div>
+    <nav class="konteineris-2">
+        <a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a>
+        <a href="http://127.0.0.1:5500/ND_01/p2.html" target="_blank">Azorai</a>
+        <a href="http://127.0.0.1:5500/ND_01/p3.html" target="_blank">La Palma</a>
+        <a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a>
+    </nav>
+    <div>
         <h1><i>Salų takais &#127965</i></h1>
     </div> 
-    <section>
-        <ol>
-            <li><a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a></li>
-            <li><a href="http://127.0.0.1:5500/ND_01/p2.html" target="_blank">Azorai</a></li>
-            <li><a href="http://127.0.0.1:5500/ND_01/p3.html" target="_blank">La Palma</a></li>
-            <li><a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a></li>
-        </ol>
-    </section>
+    
     <section class="konteineris">
         <div class="blokai">
             <h2>Madeira (Portugalija)</h2>
