--- a/ND_01/p3.html
+++ b/ND_01/p3.html
@@ -7,10 +7,13 @@
     <title>La Palma</title>
 </head>
 <body class="konteineris">
-    <nav><a href="http://127.0.0.1:5500/ND_01/Puslapis.html" target="_self">Pradinis puslapis</a>
+    <nav>
+        <a href="http://127.0.0.1:5500/ND_01/Puslapis.html" target="_self">Pradinis puslapis</a>
     </nav>
     <div class="blokas">
-        <h1><i>La Palma</i> &#128693</h1>
+        <h1>
+            <i>La Palma</i>
+        </h1>
     </div>
     <div>
         <p>Palma – viena žaliausių Ispanijos Kanarų salų, dažnai vadinama „Gražiąja sala“. Kalba – ispanų, valiuta – euras. <br>Įžymios vietos: Caldera de Taburiente nacionalinis parkas ir Roque de los Muchachos observatorija. Sala puikiai tinka žygiams, astronomijai ir nardymui. <br>Kraštovaizdį sudaro gilūs tarpekiai, ugnikalniai ir tankūs miškai.</p>
