--- a/ND_01/Puslapis.html
+++ b/ND_01/Puslapis.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <nav class="konteineris-2">
-        <a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a>
-        <a href="http://127.0.0.1:5500/ND_01/p2.html" target="_blank">Azorai</a>
-        <a href="http://127.0.0.1:5500/ND_01/p3.html" target="_blank">La Palma</a>
-        <a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a>
+        <button class="meniu">Meniu</button>
+        <div class="mygtukai">
+            <a href="http://127.0.0.1:5500/ND_01/p1.html" target="_blank">Madeira</a><br>
+            <a href="http://127.0.0.1:5500/ND_01/p2.html" target="_blank">Azorai</a><br>
+            <a href="http://127.0.0.1:5500/ND_01/p3.html" target="_blank">La Palma</a><br>
+            <a href="http://127.0.0.1:5500/ND_01/p4.html" target="_blank">Žaliasis kyšulys</a><br>
+        </div>  
     </nav>
     <div>
         <h1><i>Salų takais &#127965</i></h1>
@@ -20,32 +23,33 @@
     
     <section class="konteineris">
         <div class="blokai">
-            <h2>Madeira (Portugalija)</h2>
+            <h2>Madeira (Portugalija)<span class="madeira"><img src="Img/madmaps.png" alt="Madeira"></span></h2>
             <p><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos<br>
                <b>Pagrindinė kalba:</b>Portugalų<br>
                <b>Atstumas nuo Lietuvos:</b> ~4000 km 
             </p>
         </div>
         <div class="blokai">
-            <h2>Azorai (Portugalija)</h2>
+            <h2>Azorai (Portugalija)<span class="azorai"><img src="Img/azomaps.png" alt="Azorai"></span></h2>
             <p><b>Geografinė padėtis:</b> Atlanto vandenyne, tarp Europos ir Š. Amerikos<br>
                <b>Pagrindinė kalba:</b>Portugalų<br>
                <b>Atstumas nuo Lietuvos:</b> ~4200 km 
         </div>
         <div class="blokai">
-            <h2>La Palma (Ispanija)</h2>
+            <h2>La Palma (Ispanija)<span class="lapalma"><img src="Img/palmaps.png" alt="La Palma"></span></h2>
             <p><b>Geografinė padėtis:</b> Atlanto vandenyne, Kanarų salos<br>
                <b>Pagrindinė kalba:</b>Ispanų<br>
                <b>Atstumas nuo Lietuvos:</b> ~4500 km
             </p> 
         </div>
         <div class="blokai">
-            <h2>Žaliasis kyšulys (Cape Verde)</h2>
+            <h2>Žaliasis kyšulys (Cape Verde)<span class="cape"><img src="Img/cvmaps.png" alt="Cape Verde"></span></h2>
             <p><b>Geografinė padėtis:</b> Atlanto vandenyne, prie vakarų Afrikos<br>
                <b>Pagrindinė kalba:</b>Portugalų (taip pat kreolų)<br>
                <b>Atstumas nuo Lietuvos:</b> ~5500 km 
             </p>
         </div>
     </section>
+    
 </body>
 </html>
