--- a/Mentore 002/index.html
+++ b/Mentore 002/index.html
@@ -25,7 +25,7 @@
   <main>
     <div class="box">
       <div class="poland">
-        <h1>POLAND</h1>
+        <span>POLAND</span>
       </div>
       <div class="Lorem">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
