--- a/ND_01/p3.html
+++ b/ND_01/p3.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stilius4.css">
     <title>La Palma</title>
 </head>
-<body class="konteineris">
+<body>
     <nav>
         <a href="http://127.0.0.1:5500/ND_01/Puslapis.html" target="_self">Pradinis puslapis</a>
     </nav>
