--- a/ND_01/p3.html
+++ b/ND_01/p3.html
@@ -7,21 +7,23 @@
     <title>La Palma</title>
 </head>
 <body>
-    <nav>
-        <a href="http://127.0.0.1:5500/ND_01/Puslapis.html" target="_self">Pradinis puslapis</a>
-    </nav>
-    <div class="blokas">
-        <h1>
-            <i>La Palma</i>
-        </h1>
-    </div>
-    <div>
-        <p>Palma – viena žaliausių Ispanijos Kanarų salų, dažnai vadinama „Gražiąja sala“. Kalba – ispanų, valiuta – euras. <br>Įžymios vietos: Caldera de Taburiente nacionalinis parkas ir Roque de los Muchachos observatorija. Sala puikiai tinka žygiams, astronomijai ir nardymui. <br>Kraštovaizdį sudaro gilūs tarpekiai, ugnikalniai ir tankūs miškai.</p>
+    <div class="container">
+        <nav>
+            <a href="http://127.0.0.1:5500/ND_01/Puslapis.html" target="_self">Pradinis puslapis</a>
+        </nav>
+        <div class="blokas">
+            <h1>
+                <i>La Palma</i>
+            </h1>
+        </div>
         <div>
-            <tr><img src="Img/La Palma.png" width="330" height="350"></tr>
-            <tr><img src="Img/La Palma1.png" width="330" height="350"></tr>
-            <tr><img src="Img/La Palma2.png" width="330" height="350"></tr>
-            <figcaption>La Palma</figcaption>
+            <p>Palma – viena žaliausių Ispanijos Kanarų salų, dažnai vadinama „Gražiąja sala“. Kalba – ispanų, valiuta – euras. <br>Įžymios vietos: Caldera de Taburiente nacionalinis parkas ir Roque de los Muchachos observatorija. Sala puikiai tinka žygiams, astronomijai ir nardymui. <br>Kraštovaizdį sudaro gilūs tarpekiai, ugnikalniai ir tankūs miškai.</p>
+            <div>
+                <tr><img src="Img/La Palma.png" width="330" height="350"></tr>
+                <tr><img src="Img/La Palma1.png" width="330" height="350"></tr>
+                <tr><img src="Img/La Palma2.png" width="330" height="350"></tr>
+                <figcaption>La Palma</figcaption>
+            </div>
         </div>
     </div>
 </body>
