--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -17,7 +17,7 @@
                     <div class="trafalgar">Trafalgar</div>
                 </div>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li class="home"><a href="">Home</a></li>
                     <li><a href="">Find a doctor</a></li>
                     <li><a href="">Apps</a></li>
                     <li><a href="">Testimonials</a></li>
