--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -16,7 +16,7 @@
                 <div class="trafalgar">Trafalgar</div>
             </div>
             <ul>
-                <li class="home"><a href="">Home</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="">Find a doctor</a></li>
                 <li><a href="">Apps</a></li>
                 <li><a href="">Testimonials</a></li>
@@ -32,9 +32,59 @@
             <div class="trafalgar-header-image"></div>
         </div>  
     </header>
-
     <main>
-
+        <div class="our-services">
+            <div class="services-text">
+                <h2 class="h-service">Our services</h2>
+                <div class="rectangle-2"></div>
+                <p class="p-service">We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment<br> with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+            </div>
+            <div class="services">
+                <div class="blokas">
+                    <div class="search-doctor">
+                        <img class="lupa" src="Img/Frame.png">
+                        <h3>Search doctor</h3>
+                        <p>Choose your doctor from thousands<br> of specialist, general, and trusted<br> hospitals</p>
+                    </div>
+                </div>
+                <div class="blokas">
+                    <div class="online-pharmacy">
+                        <img class="buteliukas" src="Img/sevice-buteliukas.png">
+                        <h3>Online-pharmacy</h3>
+                        <p>Buy  your medicines with our<br> mobile application with a simple<br> delivery system</p>
+                    </div>
+                </div>
+                <div class="blokas">
+                    <div class="consultation">
+                        <img class="service-adres" src="Img/service-adres.png">
+                        <h3>Consultation</h3>
+                        <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                    </div>
+                </div>
+                <div class="blokas">
+                    <div class="details-info">
+                        <img class="stat" src="Img/service-stat.png">
+                        <h3>Details info</h3>
+                        <p>Free consultation with our trusted<br> doctors and get the best<br> recomendations</p>
+                    </div>
+                </div>
+                <div class="blokas">
+                    <div class="emergency-core">
+                        <img class="lagam" src="Img/service-lagam.png">
+                        <h3>Emergency core</h3>
+                        <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+                    </div>
+                </div>
+                <div class="blokas">   
+                    <div class="tracking">
+                        <img class="list" src="Img/servise-list.png">
+                        <h3>Tracking</h3>
+                        <p>Track and save your medical history<br> and health data </p>
+                    </div>
+                </div>
+            </div>
+            <button class="learn-more">Learn more</button>
+        </div>
     </main> 
 
     <footer>
