--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Trafalgar</title>
 </head>
 <body>
@@ -71,7 +73,7 @@
                 <div class="blokas">
                     <div class="emergency-core">
                         <img class="lagam" src="Img/service-lagam.png">
-                        <h3>Emergency core</h3>
+                        <h3>Emergency care</h3>
                         <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
                     </div>
                 </div>
@@ -84,6 +86,25 @@
                 </div>
             </div>
             <button class="learn-more">Learn more</button>
+        </div>
+        <div class="container-provider">
+            <div class="trafalgar-provider-image"></div>
+            <div class="provider-text">    
+                <h1 class="healthcare-provider">Leading healthcare providers</h1>
+                <div class="rectangle-3"></div>
+                <p class="p-provider">Trafalgar provides progressive, and affordable<br> healthcare, accessible on mobile and online for<br> everyone. To us, it’s not just work. We take pride<br> in the solutions we deliver</p>
+                <button class="learn-more">Learn more</button>
+            </div>
+        </div>
+        <div class="container-dowload-app">
+            <div class="app-text">    
+                <h1 class="mobile-app">Download our<br> mobile apps</h1>
+                <div class="rectangle-3"></div>
+                <p class="p-app">Our dedicated patient engagement app and<br> web portal allow you to access information instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely</p>
+                <button class="download">Download 
+                    <img class="rodykle" src="Img/rodykle.png"></button>
+            </div>
+            <div class="trafalgar-app-image"></div>
         </div>
     </main> 
 
