--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -102,9 +102,58 @@
                 <div class="rectangle-3"></div>
                 <p class="p-app">Our dedicated patient engagement app and<br> web portal allow you to access information instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely</p>
                 <button class="download">Download 
-                    <img class="rodykle" src="Img/rodykle.png"></button>
+                    <img class="rodykle" src="Img/rodykle.png">
+                </button>
             </div>
             <div class="trafalgar-app-image"></div>
+        </div>
+        <div class="container-testimonials">
+            <div class="container-testimonials-block">
+                <h2 class="customer-head">What our customer are saying</h2>
+                <div class="rectangle-3"></div>
+                <div class="testimonial-review">
+                    <div class="founder-picture"></div>
+                    <div class="founder-circle">
+                        <h3 class="edward">Edward Newgate</h3>
+                        <h3 class="founder">Founder circle</h3>
+                    </div>    
+                    <p class="review-text">“Our dedicated patient engagement app and<br> web portal allow you to access information<br> instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely”</p>
+                </div>
+            </div>
+            <div class="arrows">
+                <img src="Img/arrow nav.png">
+            </div>
+        </div>
+        <div class="container-article">
+            <h2 class="article-header">Check out our latest article</h2>
+            <div class="rectangle-3"></div>
+            <div class="container-gallery">
+                <div class="article">
+                    <img src="Img/disease.png" style="border-radius: 20px;">
+                    <div>
+                        <h3>Disease detection, check up in the laboratory</h3>
+                        <p>In this case, the role of the health laboratory is very important to do a disease detection...</p>
+                        <a href="">Read more <img src="Img/desine-rodykle.png"></a>
+                    </div>         
+                </div>
+                <div class="article">
+                    <img src="Img/herbal.png" style="border-radius: 20px;">
+                    <div>
+                        <h3>Herbal medicines that are safe for consumption</h3>
+                        <p>Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                        <a href="">Read more <img src="Img/desine-rodykle.png"></a>
+                    </div> 
+                </div>
+                <div class="article">
+                    <img src="Img/natural.png" style="border-radius: 20px;">
+                    <div>
+                        <h3>Natural care for healthy facial skin</h3>
+                        <p>A healthy lifestyle should start from now and also for your skin health. There are some...</p>
+                        <a href="">Read more <img src="Img/desine-rodykle.png"></a>
+                    </div> 
+                </div>
+            </div>
+            <button class="learn-more">View all</button>
         </div>
     </main> 
 
