--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -129,15 +129,15 @@
             <div class="rectangle-3"></div>
             <div class="container-gallery">
                 <div class="article">
-                    <img src="Img/disease.png" style="border-radius: 20px;">
+                    <img src="Img/disease.png" style="border-top-right-radius: 20px; border-top-left-radius: 20px;">
                     <div>
                         <h3>Disease detection, check up in the laboratory</h3>
-                        <p>In this case, the role of the health laboratory is very important to do a disease detection...</p>
+                        <p>In this case, the role of the health laboratory is very important to do<br> a disease detection...</p>
                         <a href="">Read more <img src="Img/desine-rodykle.png"></a>
                     </div>         
                 </div>
                 <div class="article">
-                    <img src="Img/herbal.png" style="border-radius: 20px;">
+                    <img src="Img/herbal.png" style="border-top-right-radius: 20px; border-top-left-radius: 20px;">
                     <div>
                         <h3>Herbal medicines that are safe for consumption</h3>
                         <p>Herbal medicine is very widely used at this time because of its very good for your health...</p>
@@ -145,7 +145,7 @@
                     </div> 
                 </div>
                 <div class="article">
-                    <img src="Img/natural.png" style="border-radius: 20px;">
+                    <img src="Img/natural.png" style="border-top-right-radius: 20px; border-top-left-radius: 20px;">
                     <div>
                         <h3>Natural care for healthy facial skin</h3>
                         <p>A healthy lifestyle should start from now and also for your skin health. There are some...</p>
@@ -158,7 +158,41 @@
     </main> 
 
     <footer>
-
+        <div class="end-left">
+            <div class="end-logo">
+                <div class="logo">T</div>
+                <div class="trafalgar">Trafalgar</div>
+            </div>
+            <p class="big-end"></p>
+            <p class="small-end"></p>
+        </div>
+        <div class="end">
+            <h2>Company</h2>
+            <ul>
+                <li>About</li>
+                <li>Testimonials</li>
+                <li>Find a doctor</li>
+                <li>Apps</li>
+            </ul>
+        </div>
+        <div class="end">
+            <h2>Region</h2>
+            <ul>
+                <li>Indonesia</li>
+                <li>Singapore</li>
+                <li>Hongkong</li>
+                <li>Canada</li>
+            </ul>
+        </div>
+        <div class="end">
+            <h2>Help</h2>
+            <ul>
+                <li>Help center</li>
+                <li>Contact support</li>
+                <li>Instructions</li>
+                <li>How it works</li>
+            </ul>
+        </div>
     </footer>
     
 </body>
