--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -163,36 +163,39 @@
                 <div class="logo">T</div>
                 <div class="trafalgar">Trafalgar</div>
             </div>
-            <p class="big-end"></p>
-            <p class="small-end"></p>
+            <p class="big-end">Trafalgar provides progressive, and affordable<br> healthcare, accessible on mobile and online<br> for everyone</p>
+            <p class="small-end">©Trafalgar PTY LTD 2020. All rights reserved</p>
         </div>
-        <div class="end">
-            <h2>Company</h2>
-            <ul>
-                <li>About</li>
-                <li>Testimonials</li>
-                <li>Find a doctor</li>
-                <li>Apps</li>
-            </ul>
-        </div>
-        <div class="end">
-            <h2>Region</h2>
-            <ul>
-                <li>Indonesia</li>
-                <li>Singapore</li>
-                <li>Hongkong</li>
-                <li>Canada</li>
-            </ul>
-        </div>
-        <div class="end">
-            <h2>Help</h2>
-            <ul>
-                <li>Help center</li>
-                <li>Contact support</li>
-                <li>Instructions</li>
-                <li>How it works</li>
-            </ul>
-        </div>
+        <div class="container-end"></div>
+            <div class="end">
+                <h2>Company</h2>
+                <ul>
+                    <li>About</li>
+                    <li>Testimonials</li>
+                    <li>Find a doctor</li>
+                    <li>Apps</li>
+                </ul>
+            </div>
+            <div class="end">
+                <h2>Region</h2>
+                <ul>
+                    <li>Indonesia</li>
+                    <li>Singapore</li>
+                    <li>Hongkong</li>
+                    <li>Canada</li>
+                </ul>
+            </div>
+            <div class="end">
+                <h2>Help</h2>
+                <ul>
+                    <li>Help center</li>
+                    <li>Contact support</li>
+                    <li>Instructions</li>
+                    <li>How it works</li>
+                </ul>
+            </div>
+        </div>    
+        <img class="footer-ball" src="Img/burbuliukai.png">
     </footer>
     
 </body>
