--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -158,15 +158,17 @@
     </main> 
 
     <footer>
-        <div class="end-left">
-            <div class="end-logo">
-                <div class="logo">T</div>
-                <div class="trafalgar">Trafalgar</div>
+        <section>
+            <div class="end-left">
+                <div class="end-logo">
+                    <div class="logo">T</div>
+                    <div class="trafalgar">Trafalgar</div>
+                </div>
+                <p class="big-end">Trafalgar provides progressive, and affordable<br> healthcare, accessible on mobile and
+                    online<br> for everyone</p>
+                <p class="small-end">©Trafalgar PTY LTD 2020. All rights reserved</p>
             </div>
-            <p class="big-end">Trafalgar provides progressive, and affordable<br> healthcare, accessible on mobile and online<br> for everyone</p>
-            <p class="small-end">©Trafalgar PTY LTD 2020. All rights reserved</p>
-        </div>
-        <div class="container-end"></div>
+            <div class="container-end"></div>
             <div class="end">
                 <h2>Company</h2>
                 <ul>
@@ -194,7 +196,9 @@
                     <li>How it works</li>
                 </ul>
             </div>
-        </div>    
+            </div>
+            <img class="footer-ball2" src="Img/burbuliukai.png">
+        </section>
         <img class="footer-ball" src="Img/burbuliukai.png">
     </footer>
     
