--- a/015 JS ciklas IR ARRAY/index.html
+++ b/015 JS ciklas IR ARRAY/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="app.js" defer></script>
+    <title>CYCLES & ARRAYS</title>
 </head>
 <body>
     
+    <ul>
+        
+    </ul>
+
 </body>
 </html>
