--- a/nd/02/index.html
+++ b/nd/02/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>nd/02</title>
 </head>
 <body>
     <div></div>
     <div id="uzd2"></div>
+
+    <section id="uzd3"></section>
+
+    <section id="uzd4"></section>
+    
+    <section id="uzd5"></section>
+
 </body>
 </html>
