--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -96,17 +96,21 @@
                 <button class="learn-more">Learn more</button>
             </div>
         </div>
-        <div class="container-dowload-app">
-            <div class="app-text">    
-                <h1 class="mobile-app">Download our<br> mobile apps</h1>
-                <div class="rectangle-3"></div>
-                <p class="p-app">Our dedicated patient engagement app and<br> web portal allow you to access information instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely</p>
-                <button class="download">Download 
-                    <img class="rodykle" src="Img/rodykle.png">
-                </button>
+        <section class="download-sekcija">
+            <img class="footer-ball3" src="Img/burbuliukai.png">
+            <div class="container-dowload-app">
+                <div class="app-text">
+                    <h1 class="mobile-app">Download our<br> mobile apps</h1>
+                    <div class="rectangle-3"></div>
+                    <p class="p-app">Our dedicated patient engagement app and<br> web portal allow you to access information
+                        instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely</p>
+                    <button class="download">Download
+                        <img class="rodykle" src="Img/rodykle.png">
+                    </button>
+                </div>
+                <div class="trafalgar-app-image"></div>
             </div>
-            <div class="trafalgar-app-image"></div>
-        </div>
+        </section>
         <div class="container-testimonials">
             <div class="container-testimonials-block">
                 <h2 class="customer-head">What our customer are saying</h2>
@@ -158,7 +162,7 @@
     </main> 
 
     <footer>
-        <section>
+        <section class="footer-sekcija">
             <div class="end-left">
                 <div class="end-logo">
                     <div class="logo">T</div>
