--- a/Mentorius/001/index.html
+++ b/Mentorius/001/index.html
@@ -13,53 +13,53 @@
     <main>
         <ul>
             <li>
-                <a href="./Img/20210428_174634.jpg" target="_blank">
-                    <img src="./Img/20210428_174634.jpg" alt="img">
+                <a href="./Img/pic01.jpg" target="_blank">
+                    <img src="./Img/pic01.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210503_141919.jpg" target="_blank">
-                    <img src="./Img/20210503_141919.jpg" alt="img">
+                <a href="./Img/pic02.jpg" target="_blank">
+                    <img src="./Img/pic02.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210507_094836.jpg" target="_blank">
-                    <img src="./Img/20210507_094836.jpg" alt="img">
+                <a href="./Img/pic03.jpg" target="_blank">
+                    <img src="./Img/pic03.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210508_192043.jpg" target="_blank">
-                    <img src="./Img/20210508_192043.jpg" alt="img">
+                <a href="./Img/pic04.jpg" target="_blank">
+                    <img src="./Img/pic04.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210508_192044.jpg" target="_blank">
-                    <img src="./Img/20210508_192044.jpg" alt="img">
+                <a href="./Img/pic05.jpg" target="_blank">
+                    <img src="./Img/pic05.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210508_192048.jpg" target="_blank">
-                    <img src="./Img/20210508_192048.jpg" alt="img">
+                <a href="./Img/pic06.jpg" target="_blank">
+                    <img src="./Img/pic06.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210508_192105.jpg" target="_blank">
-                    <img src="./Img/20210508_192105.jpg" alt="img">
+                <a href="./Img/pic07.jpg" target="_blank">
+                    <img src="./Img/pic07.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210508_192106.jpg" target="_blank">
-                    <img src="./Img/20210508_192106.jpg" alt="img">
+                <a href="./Img/pic08.jpg" target="_blank">
+                    <img src="./Img/pic08.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210528_170252.jpg" target="_blank">
-                    <img src="./Img/20210528_170252.jpg" alt="img">
+                <a href="./Img/pic09.jpg" target="_blank">
+                    <img src="./Img/pic09.jpg" alt="img">
                 </a>
             </li>
             <li>
-                <a href="./Img/20210528_173444.jpg" target="_blank">
-                    <img src="./Img/20210528_173444.jpg" alt="img">
+                <a href="./Img/pic10.jpg" target="_blank">
+                    <img src="./Img/pic10.jpg" alt="img">
                 </a>
             </li>
         </ul>
