--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -26,6 +26,7 @@
             </ul>
         </nav>
         <div class="container-header">
+            <img class="footer-ball6" src="Img/burbuliukai.png">
             <div class="header-text">    
                 <h1 class="virtual">Virtual healthcare for you</h1>
                 <p class="pheader">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online <br>for everyone</p>
@@ -34,59 +35,67 @@
             <div class="trafalgar-header-image"></div>
         </div>  
     </header>
+
     <main>
-        <div class="our-services">
-            <div class="services-text">
-                <h2 class="h-service">Our services</h2>
-                <div class="rectangle-2"></div>
-                <p class="p-service">We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment<br> with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+        <section class="sekcija-1">
+            <div class="our-services">
+                <div class="services-text">
+                    <h2 class="h-service">Our services</h2>
+                    <div class="rectangle-2"></div>
+                    <p class="p-service">We provide to you the best choiches for you. Adjust it to your health needs and make
+                        sure your undergo treatment<br> with our highly qualified doctors you can consult with us which type of
+                        service is suitable for your health</p>
+                </div>
+                <div class="services">
+                    <div class="blokas">
+                        <div class="search-doctor">
+                            <img class="lupa" src="Img/Frame.png">
+                            <h3>Search doctor</h3>
+                            <p>Choose your doctor from thousands<br> of specialist, general, and trusted<br> hospitals</p>
+                        </div>
+                    </div>
+                    <div class="blokas">
+                        <div class="online-pharmacy">
+                            <img class="buteliukas" src="Img/sevice-buteliukas.png">
+                            <h3>Online-pharmacy</h3>
+                            <p>Buy your medicines with our<br> mobile application with a simple<br> delivery system</p>
+                        </div>
+                    </div>
+                    <div class="blokas">
+                        <div class="consultation">
+                            <img class="service-adres" src="Img/service-adres.png">
+                            <h3>Consultation</h3>
+                            <p>Free consultation with our trusted doctors and get the best recomendations</p>
+                        </div>
+                    </div>
+                    <div class="blokas">
+                        <div class="details-info">
+                            <img class="stat" src="Img/service-stat.png">
+                            <h3>Details info</h3>
+                            <p>Free consultation with our trusted<br> doctors and get the best<br> recomendations</p>
+                        </div>
+                    </div>
+                    <div class="blokas">
+                        <div class="emergency-core">
+                            <img class="lagam" src="Img/service-lagam.png">
+                            <h3>Emergency care</h3>
+                            <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+                        </div>
+                    </div>
+                    <div class="blokas">
+                        <div class="tracking">
+                            <img class="list" src="Img/servise-list.png">
+                            <h3>Tracking</h3>
+                            <p>Track and save your medical history<br> and health data </p>
+                        </div>
+                    </div>
+                </div>       
+                <button class="learn-more">Learn more</button>
             </div>
-            <div class="services">
-                <div class="blokas">
-                    <div class="search-doctor">
-                        <img class="lupa" src="Img/Frame.png">
-                        <h3>Search doctor</h3>
-                        <p>Choose your doctor from thousands<br> of specialist, general, and trusted<br> hospitals</p>
-                    </div>
-                </div>
-                <div class="blokas">
-                    <div class="online-pharmacy">
-                        <img class="buteliukas" src="Img/sevice-buteliukas.png">
-                        <h3>Online-pharmacy</h3>
-                        <p>Buy  your medicines with our<br> mobile application with a simple<br> delivery system</p>
-                    </div>
-                </div>
-                <div class="blokas">
-                    <div class="consultation">
-                        <img class="service-adres" src="Img/service-adres.png">
-                        <h3>Consultation</h3>
-                        <p>Free consultation with our trusted doctors and get the best recomendations</p>
-                    </div>
-                </div>
-                <div class="blokas">
-                    <div class="details-info">
-                        <img class="stat" src="Img/service-stat.png">
-                        <h3>Details info</h3>
-                        <p>Free consultation with our trusted<br> doctors and get the best<br> recomendations</p>
-                    </div>
-                </div>
-                <div class="blokas">
-                    <div class="emergency-core">
-                        <img class="lagam" src="Img/service-lagam.png">
-                        <h3>Emergency care</h3>
-                        <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
-                    </div>
-                </div>
-                <div class="blokas">   
-                    <div class="tracking">
-                        <img class="list" src="Img/servise-list.png">
-                        <h3>Tracking</h3>
-                        <p>Track and save your medical history<br> and health data </p>
-                    </div>
-                </div>
-            </div>
-            <button class="learn-more">Learn more</button>
-        </div>
+            <img class="footer-ball5" src="Img/burbuliukai.png">
+        
+            <img class="vektorius-2" src="Img/didelis2.png" alt="vektorius"> 
+        </section>
         <div class="container-provider">
             <div class="trafalgar-provider-image"></div>
             <div class="provider-text">    
@@ -112,6 +121,7 @@
             </div>
         </section>
         <div class="container-testimonials">
+            <img class="footer-ball7" src="Img/burbuliukai.png">
             <div class="container-testimonials-block">
                 <h2 class="customer-head">What our customer are saying</h2>
                 <div class="rectangle-3"></div>
@@ -129,8 +139,14 @@
             </div>
         </div>
         <div class="container-article">
+            <img class="footer-ball4" src="Img/burbuliukai.png">
+
+            <img class="vektorius-1" src="Img/didelis1.png" alt="vektorius">
+
             <h2 class="article-header">Check out our latest article</h2>
+
             <div class="rectangle-3"></div>
+
             <div class="container-gallery">
                 <div class="article">
                     <img src="Img/disease.png" style="border-top-right-radius: 20px; border-top-left-radius: 20px;">
