--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -123,6 +123,7 @@
         <div class="container-testimonials">
             <img class="footer-ball7" src="Img/burbuliukai.png">
             <div class="container-testimonials-block">
+                <img class="footer-ball8" src="Img/burbuliukai.png">
                 <h2 class="customer-head">What our customer are saying</h2>
                 <div class="rectangle-3"></div>
                 <div class="testimonial-review">
