--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -32,7 +32,7 @@
                 <p class="pheader">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online <br>for everyone</p>
                 <button class="consult-today">Consult today</button>
             </div>
-            <div class="trafalgar-header-image"></div>
+            <img class="trafalgar-header-image" src="Img/e7c8a652b4ff26a094731214f377e182c2504450.png" alt="">
         </div>  
     </header>
 
@@ -96,7 +96,7 @@
         
             <img class="vektorius-2" src="Img/didelis2.png" alt="vektorius"> 
         </section>
-        <div class="container-provider">
+        <section class="container-provider">
             <div class="trafalgar-provider-image"></div>
             <div class="provider-text">    
                 <h1 class="healthcare-provider">Leading healthcare providers</h1>
@@ -104,7 +104,7 @@
                 <p class="p-provider">Trafalgar provides progressive, and affordable<br> healthcare, accessible on mobile and online for<br> everyone. To us, it’s not just work. We take pride<br> in the solutions we deliver</p>
                 <button class="learn-more">Learn more</button>
             </div>
-        </div>
+        </section>
         <section class="download-sekcija">
             <img class="footer-ball3" src="Img/burbuliukai.png">
             <div class="container-dowload-app">
