--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -96,8 +96,9 @@
         
             <img class="vektorius-2" src="Img/didelis2.png" alt="vektorius"> 
         </section>
+
         <section class="container-provider">
-            <div class="trafalgar-provider-image"></div>
+            <img class="trafalgar-provider-image" src="Img/trafalgar-illustration sec02 1.png">
             <div class="provider-text">    
                 <h1 class="healthcare-provider">Leading healthcare providers</h1>
                 <div class="rectangle-3"></div>
@@ -105,6 +106,7 @@
                 <button class="learn-more">Learn more</button>
             </div>
         </section>
+
         <section class="download-sekcija">
             <img class="footer-ball3" src="Img/burbuliukai.png">
             <div class="container-dowload-app">
@@ -120,6 +122,7 @@
                 <div class="trafalgar-app-image"></div>
             </div>
         </section>
+
         <div class="container-testimonials">
             <img class="footer-ball7" src="Img/burbuliukai.png">
             <div class="container-testimonials-block">
@@ -139,6 +142,7 @@
                 <img src="Img/arrow nav.png">
             </div>
         </div>
+        
         <div class="container-article">
             <img class="footer-ball4" src="Img/burbuliukai.png">
 
