--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -119,11 +119,11 @@
                         <img class="rodykle" src="Img/rodykle.png">
                     </button>
                 </div>
-                <div class="trafalgar-app-image"></div>
             </div>
+            <img class="trafalgar-app-image" src="Img/trafalgar-illustration sec03 1.png">
         </section>
 
-        <div class="container-testimonials">
+        <section class="container-testimonials">
             <img class="footer-ball7" src="Img/burbuliukai.png">
             <div class="container-testimonials-block">
                 <img class="footer-ball8" src="Img/burbuliukai.png">
@@ -138,12 +138,10 @@
                     <p class="review-text">“Our dedicated patient engagement app and<br> web portal allow you to access information<br> instantaneously (no tedeous form, long calls,<br> or administrative hassle) and securely”</p>
                 </div>
             </div>
-            <div class="arrows">
-                <img src="Img/arrow nav.png">
-            </div>
-        </div>
+            <img class="arrows" src="Img/arrow nav.png">
+        </section>
         
-        <div class="container-article">
+        <section class="container-article">
             <img class="footer-ball4" src="Img/burbuliukai.png">
 
             <img class="vektorius-1" src="Img/didelis1.png" alt="vektorius">
@@ -179,7 +177,7 @@
                 </div>
             </div>
             <button class="learn-more">View all</button>
-        </div>
+        </section>
     </main> 
 
     <footer>
@@ -194,34 +192,35 @@
                 <p class="small-end">©Trafalgar PTY LTD 2020. All rights reserved</p>
             </div>
             <div class="container-end"></div>
-            <div class="end">
-                <h2>Company</h2>
-                <ul>
-                    <li>About</li>
-                    <li>Testimonials</li>
-                    <li>Find a doctor</li>
-                    <li>Apps</li>
-                </ul>
+                <div class="end">
+                    <h2>Company</h2>
+                    <ul>
+                        <li>About</li>
+                        <li>Testimonials</li>
+                        <li>Find a doctor</li>
+                        <li>Apps</li>
+                    </ul>
+                </div>
+                <div class="end">
+                    <h2>Region</h2>
+                    <ul>
+                        <li>Indonesia</li>
+                        <li>Singapore</li>
+                        <li>Hongkong</li>
+                        <li>Canada</li>
+                    </ul>
+                </div>
+                <div class="end">
+                    <h2>Help</h2>
+                    <ul>
+                        <li>Help center</li>
+                        <li>Contact support</li>
+                        <li>Instructions</li>
+                        <li>How it works</li>
+                    </ul>
+                </div>
             </div>
-            <div class="end">
-                <h2>Region</h2>
-                <ul>
-                    <li>Indonesia</li>
-                    <li>Singapore</li>
-                    <li>Hongkong</li>
-                    <li>Canada</li>
-                </ul>
-            </div>
-            <div class="end">
-                <h2>Help</h2>
-                <ul>
-                    <li>Help center</li>
-                    <li>Contact support</li>
-                    <li>Instructions</li>
-                    <li>How it works</li>
-                </ul>
-            </div>
-            </div>
+            
             <img class="footer-ball2" src="Img/burbuliukai.png">
         </section>
         <img class="footer-ball" src="Img/burbuliukai.png">
