--- a/Mentorius/002 GRID'as/index.html
+++ b/Mentorius/002 GRID'as/index.html
@@ -13,7 +13,6 @@
         <header>Header</header>
 
         <section class="hero">Hero</section>
-
         <!-- section.sec-$*5 sukuria section 5 elementus su klase sec-1 ir numeracija -->
         <section class="sec-1">Section 1</section> 
         <section class="sec-2">Section 2</section>
@@ -21,11 +20,10 @@
         <section class="sec-4">Section 4</section>
         <section class="sec-5">Section 5</section>
         <section class="sec-6">Section 6</section>
-
         <section class="promo">Promo</section>
 
         <footer>Footer</footer>
     </div>
-
+    <div class="shock"></div>
 </body>
 </html>
