--- a/Trafalgar/index.html
+++ b/Trafalgar/index.html
@@ -178,10 +178,12 @@
             </div>
             <button class="learn-more">View all</button>
         </section>
+
     </main> 
 
     <footer>
         <section class="footer-sekcija">
+            
             <div class="end-left">
                 <div class="end-logo">
                     <div class="logo">T</div>
@@ -191,7 +193,8 @@
                     online<br> for everyone</p>
                 <p class="small-end">©Trafalgar PTY LTD 2020. All rights reserved</p>
             </div>
-            <div class="container-end"></div>
+
+            <div class="container-end">
                 <div class="end">
                     <h2>Company</h2>
                     <ul>
